--- a/app/templates/ownedGames/ownedGamesTemplate.html
+++ b/app/templates/ownedGames/ownedGamesTemplate.html
@@ -1,1 +1,1 @@
-<p>Hello {{name || "World"}}</p>
+<table class="table table-condensed table-striped"><thead><tr><th>Title</th></tr></thead><tbody><tr ng-repeat="game in gamesList"><th>{{game.title}}</th></tr></tbody></table>
