--- a/app/modules/ownedGames/ownedGamesTemplate.jade
+++ b/app/modules/ownedGames/ownedGamesTemplate.jade
@@ -3,5 +3,5 @@ table.table.table-condensed.table-striped
     tr
       th Title
   tbody
-    tr(ng-repeat="game in gamesList | orderBy:'title'")
+    tr(ng-repeat="game in ownedGames | orderBy:'title'")
       th {{game.title}}
