--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -71,6 +71,12 @@ body {
     margin-top: 28px;
 }
 
+@media screen and (min-width: 768px) {
+    .collapse{
+        display: block !important;
+    }
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
