--- a/app/templates/ownedGames/ownedGamesTemplate.html
+++ b/app/templates/ownedGames/ownedGamesTemplate.html
@@ -1,1 +1,1 @@
-<table class="table table-condensed table-striped"><thead><tr><th>Title</th></tr></thead><tbody><tr ng-repeat="game in gamesList | orderBy:'title'"><th>{{game.title}}</th></tr></tbody></table>
+<table class="table table-condensed table-striped"><thead><tr><th>Title</th></tr></thead><tbody><tr ng-repeat="game in ownedGames | orderBy:'title'"><th>{{game.title}}</th></tr></tbody></table>
