NERD002, refactored modal into it's own directive

--- a/app/modules/common/directives/modal/modalTemplate.jade
+++ b/app/modules/common/directives/modal/modalTemplate.jade
@@ -1,5 +1,1 @@
-.ng-modal(ng-show="show")
-  .ng-modal-overlay(ng-click="hideModal()")
-  .ng-modal-dialog(ng-style="dialogStyle")
-    .ng-modal-close(ng-click="hideModal()")
-    .ng-modal-dialog-content(ng-translcude)
+button.btn-primary(ng-click="open()") Add a Game
