--- a/app/modules/wantedGames/wantedGamesTemplate.jade
+++ b/app/modules/wantedGames/wantedGamesTemplate.jade
@@ -1,5 +1,5 @@
 div.row
-  button.btn-primary(ng-click="open()") Add a Game
+  ng-modal(games="gamesList")
   div
     table.table.table-condensed.table-striped
       thead
