NERD006, started alert modal work

--- a/app/modules/wantedGames/wantedGamesTemplate.jade
+++ b/app/modules/wantedGames/wantedGamesTemplate.jade
@@ -16,3 +16,5 @@ div.row
             button.btn(ng-click="vote(game)") Vote!
           th
             button.btn(ng-click="owned(game)") Owned?
+
+ng-alert-modal(message="alertMessage")
